edited the footer language buttons

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 							<h3>Tomato Sauce With Olive &amp; Ouzo</h3>
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 						</div>
+						
 					</div>
 				</div>
 			</section>
@@ -202,15 +203,15 @@
 
 				<ul class="copyright">
 					<li>
-						<button class="translate" id="en">EN</button> 
-						<button class="translate" id="fr">FR</button>
-						<button class="translate" id="gr">GR</button>
+						<button class="button translate special" id="en">EN</button> 
+						<button class="button translate" id="fr">FR</button>
+						<button class="button translate" id="gr">GR</button>
 					</li>
 				</ul>
 
 				<ul class="copyright">
-					
-					<li>Copyright &copy; 2017 Kalikori Olive Oil</li><li>Design: <a href="https://tomkonidas.com">Tom Konidas</a></li>
+					<li>Copyright &copy; 2017 Kalikori Olive Oil</li>
+					<li>Design: <a href="https://tomkonidas.com">Tom Konidas</a></li>
 				</ul>
 			</section>
 
