cleaned up some JS

--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
 
 				<ul class="copyright">
 					<li>
-						<button class="button translate special" id="en">EN</button> 
-						<button class="button translate" id="fr">FR</button>
-						<button class="button translate" id="gr">GR</button>
+						<button class="button special" id="en">EN</button> 
+						<button class="button" id="fr">FR</button>
+						<button class="button" id="gr">GR</button>
 					</li>
 				</ul>
 
