Add customer's photos'

--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="Tom Konidas">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="apple-mobile-web-app-title" content="JP Charlebois">
-    <meta name="application-name" content="Kalikori Olive Oil">
-    <meta name="msapplication-TileColor" content="#f7b617">
-    <meta name="theme-color" content="#f7b617">
-    <meta name="author" content="Tom Konidas">
+    <meta name="msapplication-TileColor" content="#00a300">
+    <meta name="theme-color" content="#ffffff">
+
+
     <title>Kalikori Olive Oil</title>
     <!-- Loading CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,13 +22,14 @@
 </head>
 
 <body>
-    <section style="background: url(assets/images/landing.jpg) no-repeat center center / cover" class="hero is-fullheight">
+    <section style="background: url(assets/images/landing.jpg) no-repeat center center / cover" class="hero is-primary is-fullheight">
         <div class="hero-body">
             <div class="container">
                 <!-- Logo -->
                 <div class="level-item has-text-centered">
                     <div class="landingLogo animate fadeIn one">
-                        <img src="assets/images/logo.svg" alt="Logo" width="260">              
+                        <!--<img src="assets/images/logo.svg" alt="Logo" width="320">   -->
+                        <h1 class="title landingText">Kalikori Olive Oil</h1>           
                     </div>
                 </div>      
             </div>
@@ -74,7 +75,7 @@
         </div>
     </section>
                
-    <section style="background: url(assets/images/greece.jpg) no-repeat center center / cover" class="hero is-fullheight"></section>              
+    <section style="background: url(assets/images/productDisplay.jpg) no-repeat center center / cover" class="hero is-fullheight"></section>              
 
     <!-- About -->
     <section class="section is-medium about">
@@ -130,7 +131,7 @@
         </div>
     </section>
 
-    <section style="background: url(assets/images/bread.jpg) no-repeat center center / cover" class="hero is-fullheight"></section>              
+    <section style="background: url(assets/images/productMeal.jpg) no-repeat center center / cover" class="hero is-fullheight"></section>              
 
     <!-- Footer -->
     <footer class="footer">
@@ -161,21 +162,16 @@
                             </div>
                         </div>
                 <div class="socialMedia">
-                    <a href="">
+                    <a href="https://www.facebook.com/KalikoriOliveOil/">
                         <span class="icon"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></span>
                     </a>
-                    <a href="">
+                    <a href="https://www.instagram.com/kalikori_olive_oil/">
                         <span class="icon"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></span>
                     </a>
-                    <a href="">
+                    <a href="https://www.youtube.com/user/kalamataspook">
                         <span class="icon"><i class="fa fa-youtube fa-2x" aria-hidden="true"></i></span>
                     </a>
-                    <a href="">
-                            <span class="icon"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></span>
-                    </a>
                 </div>
-                <br>
-                <img src="assets/images/logo.svg" alt="Logo" width="220">
             </div>
             <p class="content has-text-centered">&copy;<span id="currentYear"></span> KALIKORIOLIVEOIL.COM</p>
         </div>
