Add landing logo and footer logo

--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,7 @@
                 <!-- Logo -->
                 <div class="level-item has-text-centered">
                     <div class="landingLogo animate fadeIn one">
-                        <!--<img src="assets/images/logo.svg" alt="Logo" width="320">   -->
-                        <h1 class="title landingText">Kalikori Olive Oil</h1>           
+                        <img src="assets/images/kalikori.svg" alt="Logo" width="900">  
                     </div>
                 </div>      
             </div>
@@ -144,6 +143,11 @@
                                     Spyros Bourboulis: 514 892-0180<br>
                                     info@kalikorioliveoil.com
                                 </p>
+                            </div>
+                            <div class="column">
+                                <figure class="image">
+                                    <img src="assets/images/kalikori_green.svg" alt="Logo" width="900">  
+                                </figure>
                             </div>
                             <div class="column">
                                 <p> <h3 class="title is-5">Dovre Import & Export Ltd.</h3>
