Fix type in address

--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
                             <div class="column">
                                 <p> <h3 class="title is-5">Favuzzi International Inc.</h3>
                                     www.favuzzi.com<br>
-                                    S65 Port-Royal Ouest<br>
+                                    65 Port-Royal Ouest<br>
                                     Montreal, Qc, H3L 2A7 <br>
                                     info@favuzzi.com
                                 </p>
