Update footer and favicon

--- a/src/index.html
+++ b/src/index.html
@@ -6,34 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Tom Konidas">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <meta name="description" content="From tree to bottle. Superb quality greek olive oil. - Kalikori Olive Oil">
+    <title>Kalikori Olive Oil</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#00a300">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-
-    <title>Kalikori Olive Oil</title>
     <!-- Loading CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/main.min.css">
 </head>
 
 <body>
-    <section style="background: url(assets/images/landing.jpg) no-repeat center center / cover" class="hero is-primary is-fullheight">
+    <section style="background: url(assets/images/landing.jpg) no-repeat center center / cover"
+        class="hero is-primary is-fullheight">
         <div class="hero-body">
             <div class="container">
                 <!-- Logo -->
                 <div class="level-item has-text-centered">
                     <div class="landingLogo animate fadeIn one">
-                        <img src="assets/images/kalikori.svg" alt="Logo" width="900">  
+                        <img src="assets/images/kalikori.svg" alt="Logo" width="900">
                     </div>
-                </div>      
+                </div>
             </div>
         </div>
-    </section>   
+    </section>
 
 
     <!-- Products -->
@@ -56,108 +67,116 @@
                         <img src="assets/images/product2.jpg">
                     </figure>
                     <h1 class="title">Olive Oil</h1>
-                    <p><strong>500ml</strong><br>The premium cold pressed L’olivier de vassily olive oil comes exclusively 
-                        from the village of Kalethéa in the Kalamata region of Greece. 
-                        The first pressing of the small green vatsikes olives result in it's distinctive 
-                        green colour and peppery finish.  The oil which is lold in a 500 ml 
+                    <p><strong>500ml</strong><br>The premium cold pressed L’olivier de vassily olive oil comes
+                        exclusively
+                        from the village of Kalethéa in the Kalamata region of Greece.
+                        The first pressing of the small green vatsikes olives result in it's distinctive
+                        green colour and peppery finish. The oil which is lold in a 500 ml
                         bottle has a lower acidity level of 0.40% and each bottle carries a best before date.
-                        The olive branch was adopted as a graphic on the label because it has been used since 
+                        The olive branch was adopted as a graphic on the label because it has been used since
                         antiquity as a symbol of peace, prosperity and a desire to excel.</p>
-                    <p> <strong>3L</strong><br>The producers of L'olivier de Vassily are proud to introduce their Kalikori blend, 
-                        made with Mavro elies (black olives) and Koroneiki olives from the famous region of 
-                        Messinia, Kalamata.  This exceptional olive oil boasts the best of both worlds and has 
-                        a low acidity level of 0.4%  Use Kalikori blend for all your everyday kitchen needs.  </p>
+                    <p> <strong>3L</strong><br>The producers of L'olivier de Vassily are proud to introduce their
+                        Kalikori blend,
+                        made with Mavro elies (black olives) and Koroneiki olives from the famous region of
+                        Messinia, Kalamata. This exceptional olive oil boasts the best of both worlds and has
+                        a low acidity level of 0.4% Use Kalikori blend for all your everyday kitchen needs. </p>
                     </p>
 
                 </div>
             </div>
         </div>
     </section>
-               
-    <section style="background: url(assets/images/productDisplay.jpg) no-repeat center center / cover" class="hero is-fullheight"></section>              
+
+    <section style="background: url(assets/images/productDisplay.jpg) no-repeat center center / cover"
+        class="hero is-fullheight"></section>
 
     <!-- About -->
     <section class="section is-medium about">
         <div class="container">
             <h1 class="title has-text-centered">About Us</h1>
-        <br>
+            <br>
             <div class="columns">
                 <div class="column is-one-third">
-                        <figure class="image">
-                                <img src="assets/images/about.jpg">
-                    
-                                    <img src="assets/images/about2.jpg">
-                                    <img src="assets/images/about3.jpg" alt="">
-                                  </figure>
+                    <figure class="image">
+                        <img src="assets/images/about.jpg">
+
+                        <img src="assets/images/about2.jpg">
+                        <img src="assets/images/about3.jpg" alt="">
+                    </figure>
                 </div>
                 <div class="column">
-                    <p>In 1950, Vassily, the Grandfather of Effy Ligris and her father Stavros Ligris planted 
-                            a grove of vatsikes olive trees on family land in the hills near 
-                            Kalethéa, in the Kalamata region of Greece.</p>
-                        <p>For more than half a century since then,  the olive oil produced from this grove has been 
-                            a central ingredient of family life: the harvest, the way they eat, their belief in its 
-                            health benefits and even in family rituals and ceremonies. 
-                            Each new-born Ligris is anointed with the oil at baptism and thus is introduced to 
-                            the family olive oil t a very young age.</p>
-                        <p>The special respect for the grove and its fruit has been handed down from generation to generation. 
-                            Effy, with the approval and blessing of her family, has established her company Kalikori so 
-                            that she is able to share this bounty with others across the Atlantic. 
-                            It is fitting that the name Kalikori means“good daughter” in Greek and pays homage 
-                            to Effy’s forebears and her heritage, She aspires to live up to her name by continuing 
-                            the traditions of her family.</p>
-                        <p>With this in mind, She has named Kalikori’s premium cold-pressed L’Olivier de Vassily olive oil, 
-                            in honor of her Grandfather “Papou Vassily”.</p>
-                        <p>Throughout the year, family members nurture the olive grove. Théo Kosta, Effy’s uncle and master caretaker, 
-                            begins the harvest in November before all the olives are ripe. The olives are gathered by hand, 
-                            just as it has been done for hundreds of years. Then they are sent to the pressing machine 
-                            which washes and sorts them before extracting the oil. </p>
-                        <p>The small green vatsikes variety of olives are exclusively grown for oil. 
-                            And as a result of an early harvest and the rocky mountainous kalamata region, 
-                            the amount of oil produced from the Ligris grove is small but of Premium quality, 
-                            L”Olivier de Vassily is not a blend it comes only from the olives of the Vatsikes 
-                            trees planted by Effy’s “Papou” and Father, The early picking gives the oil 
-                            its green colour, its aroma its peppery finish and the flavor of spring grass 
-                            under the Mediterranean sun. Like fine wine, the unique flavor of each year’s 
-                            yield depends on the climate and the rainfall. As the quantity is limited, the 
-                            number of bottles varies from year to year.  </p>
-                        <p>L’Olivier de Vassily olive oil is best consumed raw as a finishing oil drizzled on 
-                            cooked dishes such as fish or soup, in pesto and on salads, 
-                            or simply as a delicious oil for dipping bread into.</p>
-                        <p>From the Ligris Family estate to you comes a taste of Greece, 
-                            a taste of tradition a taste of Spring.  </p>
-                    </div>
+                    <p>In 1950, Vassily, the Grandfather of Effy Ligris and her father Stavros Ligris planted
+                        a grove of vatsikes olive trees on family land in the hills near
+                        Kalethéa, in the Kalamata region of Greece.</p>
+                    <p>For more than half a century since then, the olive oil produced from this grove has been
+                        a central ingredient of family life: the harvest, the way they eat, their belief in its
+                        health benefits and even in family rituals and ceremonies.
+                        Each new-born Ligris is anointed with the oil at baptism and thus is introduced to
+                        the family olive oil t a very young age.</p>
+                    <p>The special respect for the grove and its fruit has been handed down from generation to
+                        generation.
+                        Effy, with the approval and blessing of her family, has established her company Kalikori so
+                        that she is able to share this bounty with others across the Atlantic.
+                        It is fitting that the name Kalikori means“good daughter” in Greek and pays homage
+                        to Effy’s forebears and her heritage, She aspires to live up to her name by continuing
+                        the traditions of her family.</p>
+                    <p>With this in mind, She has named Kalikori’s premium cold-pressed L’Olivier de Vassily olive oil,
+                        in honor of her Grandfather “Papou Vassily”.</p>
+                    <p>Throughout the year, family members nurture the olive grove. Théo Kosta, Effy’s uncle and master
+                        caretaker,
+                        begins the harvest in November before all the olives are ripe. The olives are gathered by hand,
+                        just as it has been done for hundreds of years. Then they are sent to the pressing machine
+                        which washes and sorts them before extracting the oil. </p>
+                    <p>The small green vatsikes variety of olives are exclusively grown for oil.
+                        And as a result of an early harvest and the rocky mountainous kalamata region,
+                        the amount of oil produced from the Ligris grove is small but of Premium quality,
+                        L”Olivier de Vassily is not a blend it comes only from the olives of the Vatsikes
+                        trees planted by Effy’s “Papou” and Father, The early picking gives the oil
+                        its green colour, its aroma its peppery finish and the flavor of spring grass
+                        under the Mediterranean sun. Like fine wine, the unique flavor of each year’s
+                        yield depends on the climate and the rainfall. As the quantity is limited, the
+                        number of bottles varies from year to year. </p>
+                    <p>L’Olivier de Vassily olive oil is best consumed raw as a finishing oil drizzled on
+                        cooked dishes such as fish or soup, in pesto and on salads,
+                        or simply as a delicious oil for dipping bread into.</p>
+                    <p>From the Ligris Family estate to you comes a taste of Greece,
+                        a taste of tradition a taste of Spring. </p>
                 </div>
+            </div>
         </div>
     </section>
 
-    <section style="background: url(assets/images/productMeal.jpg) no-repeat center center / cover" class="hero is-fullheight"></section>              
+    <section style="background: url(assets/images/productMeal.jpg) no-repeat center center / cover"
+        class="hero is-fullheight"></section>
 
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="content has-text-centered">
-                    <div class="columns">
-                            <div class="column">
-                                <p> <h3 class="title is-5">Kalikori</h3>
-                                    Effy Ligris: 514 826-9140 <br>
-                                    Spyros Bourboulis: 514 892-0180<br>
-                                    info@kalikorioliveoil.com
-                                </p>
-                            </div>
-                            <div class="column">
-                                <figure class="image">
-                                    <img src="assets/images/kalikori_green.svg" alt="Logo" width="900">  
-                                </figure>
-                            </div>
-                            <div class="column">
-                                <p> <h3 class="title is-5">Favuzzi International Inc.</h3>
-                                    www.favuzzi.com<br>
-                                    65 Port-Royal Ouest<br>
-                                    Montreal, Qc, H3L 2A7 <br>
-                                    info@favuzzi.com
-                                </p>
-                            </div>
-                        </div>
+                <div class="columns">
+                    <div class="column">
+                        <p>
+                            <h3 class="title is-5">Kalikori</h3>
+                            Effy Ligris: 514 826-9140 <br>
+                            Spyros Bourboulis: 514 892-0180<br>
+                            info@kalikorioliveoil.com
+                        </p>
+                    </div>
+                    <div class="column">
+                        <figure class="image">
+                            <img src="assets/images/kalikori_green.svg" alt="Logo" width="900">
+                        </figure>
+                    </div>
+                    <div class="column">
+                        <p>
+                            <h3 class="title is-5">Favuzzi International Inc.</h3>
+                            www.favuzzi.com<br>
+                            65 Port-Royal Ouest<br>
+                            Montreal, Qc, H3L 2A7 <br>
+                            info@favuzzi.com
+                        </p>
+                    </div>
+                </div>
                 <div class="socialMedia">
                     <a href="https://www.facebook.com/KalikoriOliveOil/">
                         <span class="icon"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></span>
@@ -170,7 +189,7 @@
                     </a>
                 </div>
             </div>
-            <p class="content has-text-centered">&copy;<span id="currentYear"></span> KALIKORIOLIVEOIL.COM</p>
+            <p class="content has-text-centered">&copy;<span id="currentYear"></span> KALIKORI.COM</p>
         </div>
     </footer>
 
